# xsampa2ipa

./: .anjuta_sym_db.db  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  NEWS~  README.md  config.h  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  xsampa2ipa
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  main.cc  main.cc~  xsampa2ipa  xsampa2ipa.ui
src/.deps/: main.Po
